[tool.poetry]
name = "pylsr"
version = "2021"
description = "Use this module to read, and write to Apple's Layer Source Representation (LSR) Image format."
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/PyLSR"
repository = "https://github.com/FHPythonUtils/PyLSR"
documentation = "https://github.com/FHPythonUtils/PyLSR/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "<10,>=8.1.2"

[tool.dephell.main]
from = "pyproject.toml"
to = "requirements.txt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
