[tool.poetry]
name = "pylsr"
version = "2022"
license = "mit"
description = "Use this module to read, and write to Apple's Layer Source Representation (LSR) Image format."
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/PyLSR"
repository = "https://github.com/FHPythonUtils/PyLSR"
documentation = "https://github.com/FHPythonUtils/PyLSR/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "<10,>=9.0.0"
deprecation = "<3,>=2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
imgcompare = "^2.0.1"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
